# superMC

./: .gitignore  BatchCollectionSettings.txt  CMakeLists.txt  CollectDataAccordingToSettings.py  GNUmakefile  MCnucl.cpp  MCnucl.h  MakeDensity.cpp  README.md  gaussDistThing.py  generateAvgprofile.py  superMCErrorLog.txt  superMCSTDOUT.txt
scripts/: centrality_cut_h5.py  collect_into_hdf5.py  collect_minbiasEcc_results.sh  generateAvgprofile.py  generateEbeprofiles.py  generate_EbeInitialCondition_jobs_WSUGrid.py  generate_SmoothInitialCondition_jobs_WSUGrid.py  generate_minbiasEcc_jobs_WSUGrid.py
src/: Box2D.cpp  Box2D.h  CMakeLists.txt  CollisionPair.h  EOS.cpp  EOS.h  GNUmakefile  GaussianDistribution.cpp  GaussianDistribution.h  GaussianNucleonsCal.cpp  GaussianNucleonsCal.h  GlueDensity.cpp  GlueDensity.h  GluonField.cpp  GluonField.h  HulthenFunc.cpp  IGluonSource.h  KLNModel.h  KLNfunc.h  Largex.cpp  MCnucl.cpp  MCnucl.h  MakeDensity.cpp  MakeDensity.h  Makefile  MathBasics.cpp  MathBasics.h  MathVector.h  Nucleus.cpp  Nucleus.h  OverLap.cpp  Participant.h  Particle.cpp  Particle.h  Quark.cpp  Quark.h  RandomVariable.cpp  RandomVariable.h  Spectator.h  cmake_install.cmake  (+1 more)
