cmake_minimum_required (VERSION 3.0)
project (superMC)

set (CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_HOME_DIRECTORY}")

find_package (GSL REQUIRED)

set (CMAKE_CXX_FLAGS "${GSL_CXX_FLAGS} -g -O3 -std=c++98")

SET(INCLUDE_DIRS ${GSL_INCLUDE_DIR})
SET(LIBS ${GSL_LIBRARIES})

INCLUDE_DIRECTORIES(${INCLUDE_DIRS})

add_subdirectory (src)
